--- a/code/CD/validation/single_cell/Single_cell.ipynb
+++ b/code/CD/validation/single_cell/Single_cell.ipynb
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "7a770cf4-f6b1-4c5a-9f77-0b86b78a29f1",
    "metadata": {},
    "outputs": [
@@ -497,7 +497,7 @@
     "expr_df[\"Response\"] = adata_filtered.obs[\"response_group\"].values\n",
     "expr_df[\"Patient\"] = adata_filtered.obs[\"Patient\"].values\n",
     "\n",
-    "# Агрегация по пациентам\n",
+    "# Aggregate expression data by patients\n",
     "expr_patient_aggregated = (\n",
     "    expr_df.groupby([\"Patient\", \"Subtype\", \"Response\"])[genes_of_interest]\n",
     "    .mean()\n",
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "9ad85e3b-7598-4ec8-9212-79e471885b3f",
    "metadata": {},
    "outputs": [
@@ -576,7 +576,7 @@
     "\n",
     "obs_df = adata_macro.obs[[\"final_analysis\", \"response_group\", \"Patient\"]].copy()\n",
     "\n",
-    "# Подсчитываем количество клеток каждого типа на пациента\n",
+    "# Calculate number of cells for each patient\n",
     "count_table = (\n",
     "    obs_df\n",
     "    .groupby([\"Patient\", \"final_analysis\"])\n",
@@ -584,10 +584,10 @@
     "    .unstack(fill_value=0)\n",
     ")\n",
     "\n",
-    "# Получаем количество всех миелоидных клеток на пациента (в adata_combined все клетки миелоидные)\n",
+    "# We get the number of all myeloid cells per patient (in adata_combined, all cells are myeloid)\n",
     "myeloid_count_table = adata_combined.obs.groupby(\"Patient\").size()\n",
     "\n",
-    "# Добавляем общую сумму миелоидных клеток и считаем доли IL1Bhi и IL1Blo макрофагов\n",
+    "# We add the total number of myeloid cells and calculate the proportions of IL1Bhi and IL1Blo macrophages\n",
     "count_table[\"total_myeloid\"] = myeloid_count_table\n",
     "count_table[\"IL1Bhi_percent\"] = 100 * count_table.get(\"C1Qhi IL1Bhi macro\", 0) / count_table[\"total_myeloid\"]\n",
     "count_table[\"IL1Blo_percent\"] = 100 * count_table.get(\"C1Qhi IL1Blo macro\", 0) / count_table[\"total_myeloid\"]\n",
